#100 part 1, #97 part 1